--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
         .stream-container {
             flex: 3;
             margin-right: 1rem;
+            display: flex;
+            flex-direction: column;
         }
         .chat-container {
             flex: 1;
             display: flex;
             flex-direction: column;
+            height: 100%;
         }
         .tabs {
             display: flex;
@@ -33,9 +36,11 @@
         }
         .tab-content {
             display: none;
+            height: 100%;
         }
         .tab-content.active {
             display: block;
+            height: 100%;
         }
         iframe {
             width: 100%;
@@ -44,7 +49,7 @@
         }
         .chat-iframe {
             width: 100%;
-            height: 300px;
+            height: 500px;
             border: none;
         }
     </style>
@@ -60,16 +65,12 @@
             const youtubeEmbed = `https://www.youtube.com/embed/live_stream?channel=${config.youtube_channel_id}`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
             const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
+            const recentVideoEmbed = `https://www.youtube.com/embed?listType=user_uploads&list=${config.youtube_channel_id}`;
 
-            const iframe = document.getElementById('live-stream');
-            iframe.src = youtubeEmbed;
-
-            iframe.onerror = function() {
-                iframe.src = twitchEmbed;
-                iframe.onerror = function() {
-                    iframe.src = rumbleEmbed;
-                }
-            }
+            document.getElementById('youtube-stream').src = youtubeEmbed;
+            document.getElementById('twitch-stream').src = twitchEmbed;
+            document.getElementById('rumble-stream').src = rumbleEmbed;
+            document.getElementById('recent-video').src = recentVideoEmbed;
         }
 
         function switchTab(tabId) {
@@ -81,7 +82,7 @@
 
         window.onload = async function() {
             await loadStream();
-            switchTab('twitch-chat');
+            switchTab('youtube-stream');
         }
     </script>
 </head>
@@ -100,11 +101,24 @@
     </nav>
     <main class="main-container">
         <div class="stream-container">
-            <hgroup>
-                <h2>Live Stream</h2>
-                <h3>Watch my live streams below</h3>
-            </hgroup>
-            <iframe id="live-stream" src=""></iframe>
+            <div class="tabs">
+                <button onclick="switchTab('youtube-stream')">YouTube Live</button>
+                <button onclick="switchTab('twitch-stream')">Twitch Live</button>
+                <button onclick="switchTab('rumble-stream')">Rumble Live</button>
+                <button onclick="switchTab('recent-video')">Recent YouTube Video</button>
+            </div>
+            <div id="youtube-stream" class="tab-content">
+                <iframe src=""></iframe>
+            </div>
+            <div id="twitch-stream" class="tab-content">
+                <iframe src=""></iframe>
+            </div>
+            <div id="rumble-stream" class="tab-content">
+                <iframe src=""></iframe>
+            </div>
+            <div id="recent-video" class="tab-content">
+                <iframe src=""></iframe>
+            </div>
         </div>
         <div class="chat-container">
             <div class="tabs">
@@ -137,7 +151,7 @@
         window.onload = async function() {
             await loadStream();
             await loadChat();
-            switchTab('twitch-chat');
+            switchTab('youtube-stream');
         }
     </script>
 </body>
