--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <button onclick="switchTab('rumble-stream')">Rumble Live</button>
                 <button onclick="switchTab('recent-video')">Recent YouTube Video</button>
             </div>
-            <div id="youtube-stream" class="tab-content">
+            <div id="youtube-stream" class="tab-content active">
                 <iframe src=""></iframe>
             </div>
             <div id="twitch-stream" class="tab-content">
@@ -126,7 +126,7 @@
                 <button onclick="switchTab('youtube-chat')">YouTube Chat</button>
                 <button onclick="switchTab('rumble-chat')">Rumble Chat</button>
             </div>
-            <div id="twitch-chat" class="tab-content">
+            <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
             </div>
             <div id="youtube-chat" class="tab-content">
