--- a/index.html
+++ b/index.html
@@ -23,14 +23,27 @@
             flex-direction: column;
             height: 100%;
         }
-        .tabs {
+        .tabs, .stream-buttons {
             display: flex;
             justify-content: center;
             margin-bottom: 1rem;
         }
-        .tabs button {
+        .tabs button, .stream-buttons button {
             flex: 1;
             padding: 0.5rem;
+            margin: 0 0.5rem;
+        }
+        .stream-buttons button {
+            color: white;
+        }
+        .stream-buttons .youtube-btn {
+            background-color: red;
+        }
+        .stream-buttons .twitch-btn {
+            background-color: #9146FF;
+        }
+        .stream-buttons .rumble-btn {
+            background-color: lightgreen;
         }
         .tab-content {
             display: none;
@@ -58,19 +71,28 @@
             return config;
         }
 
-        async function loadStream() {
+        async function loadStream(service) {
             const config = await loadConfig();
             const youtubeEmbed = `https://www.youtube.com/embed/live_stream?channel=${config.youtube_channel_id}`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
             const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
 
             const iframe = document.getElementById('live-stream');
-            iframe.src = youtubeEmbed;
 
-            iframe.onerror = function() {
+            if (service === 'youtube') {
+                iframe.src = youtubeEmbed;
+            } else if (service === 'twitch') {
                 iframe.src = twitchEmbed;
+            } else if (service === 'rumble') {
+                iframe.src = rumbleEmbed;
+            } else {
+                iframe.src = youtubeEmbed;
+
                 iframe.onerror = function() {
-                    iframe.src = rumbleEmbed;
+                    iframe.src = twitchEmbed;
+                    iframe.onerror = function() {
+                        iframe.src = rumbleEmbed;
+                    }
                 }
             }
         }
@@ -103,10 +125,11 @@
     </nav>
     <main class="main-container">
         <div class="stream-container">
-            <hgroup>
-                <h2>Live Stream</h2>
-                <h3>Watch my live streams below</h3>
-            </hgroup>
+            <div class="stream-buttons">
+                <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
+                <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
+                <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
+            </div>
             <iframe id="live-stream" src=""></iframe>
         </div>
         <div class="chat-container">
