--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <style>
         body {
             padding: 2rem;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
         }
         .main-container {
             display: flex;
             justify-content: space-between;
+            flex: 1;
         }
         .stream-container {
             flex: 3;
             margin-right: 1rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
         .chat-container {
             flex: 1;
@@ -59,13 +66,16 @@
         }
         iframe {
             width: 100%;
-            height: 500px;
+            height: calc(100vh - 4rem - 2rem - 1rem); /* Adjusted height to fill screen minus margins */
             border: none;
         }
         .chat-iframe {
             width: 100%;
-            height: 500px;
+            height: calc(100vh - 4rem - 2rem - 1rem); /* Adjusted height to fill screen minus margins */
             border: none;
+        }
+        nav {
+            margin-top: 1rem;
         }
     </style>
     <script>
@@ -115,18 +125,6 @@
     </script>
 </head>
 <body>
-    <nav class="container-fluid">
-        <ul>
-            <li><strong>Streamer Hub</strong></li>
-        </ul>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Past Videos</a></li>
-            <li><a href="#">Live Stream</a></li>
-            <li><a href="#">Merch</a></li>
-            <li><a href="#" role="button">Donate</a></li>
-        </ul>
-    </nav>
     <main class="main-container">
         <div class="stream-container">
             <div class="stream-buttons">
@@ -154,6 +152,18 @@
         </div>
     </main>
     <footer class="container">
+        <nav class="container-fluid">
+            <ul>
+                <li><strong>Streamer Hub</strong></li>
+            </ul>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Past Videos</a></li>
+                <li><a href="#">Live Stream</a></li>
+                <li><a href="#">Merch</a></li>
+                <li><a href="#" role="button">Donate</a></li>
+            </ul>
+        </nav>
         <small><a href="#">Privacy Policy</a> • <a href="#">Terms of Service</a></small>
     </footer>
     <script>
