--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Live Stream</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
         body {
             display: flex;
             flex-direction: column;
-            height: 100vh;
-            margin: 0;
         }
         .main-container {
             display: flex;
