--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
+            overflow: hidden; /* Prevent scrolling */
         }
         body {
             display: flex;
@@ -22,10 +23,8 @@
         }
         .stream-container {
             flex: 3;
-            margin-right: 1rem;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
         }
         .chat-container {
             flex: 1;
@@ -36,7 +35,7 @@
         .tabs, .stream-buttons {
             display: flex;
             justify-content: center;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem; /* Reduced margin */
         }
         .tabs button, .stream-buttons button {
             flex: 1;
@@ -69,12 +68,12 @@
         }
         iframe {
             width: 100%;
-            height: calc(100vh - 6rem); /* Adjusted height to fill screen minus margins */
+            height: calc(100vh - 4rem); /* Adjusted height to fill screen minus margins */
             border: none;
         }
         .chat-iframe {
             width: 100%;
-            height: calc(100vh - 6rem); /* Adjusted height to fill screen minus margins */
+            height: calc(100vh - 4rem); /* Adjusted height to fill screen minus margins */
             border: none;
         }
         nav {
