--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Live Stream</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <style>
-        html, body {
+        nav {
+        margin-top: 0; /* Remove the top margin */
+		}
+		html, body {
             margin: 0;
             padding: 0;
             height: 100%;
