--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Live Stream</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <style>
-        nav {
-        margin-top: 0; /* Remove the top margin */
-		}
 		html, body {
             margin: 0;
             padding: 0;
@@ -79,7 +76,7 @@
             border: none;
         }
         nav {
-            margin-top: 1rem;
+            margin-top: 0;
         }
     </style>
     <script>
