--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
             height: 100%;
         }
         body {
-            display: flex;
+            margin: 0;
+			display: flex;
             flex-direction: column;
         }
         .main-container {
-            display: flex;
+            padding-top: 0;
+			display: flex;
             justify-content: space-between;
             flex: 1;
         }
