--- a/live.html
+++ b/live.html
@@ -6,46 +6,79 @@
     <title>Live Stream</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <style>
+		html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
         body {
-            padding: 2rem;
+            margin: 0;
+			display: flex;
+            flex-direction: column;
         }
         .main-container {
-            display: flex;
+            padding-top: 0;
+			display: flex;
             justify-content: space-between;
+            flex: 1;
         }
         .stream-container {
             flex: 3;
-            margin-right: 1rem;
+            display: flex;
+            flex-direction: column;
         }
         .chat-container {
             flex: 1;
             display: flex;
             flex-direction: column;
+            height: 100%;
         }
-        .tabs {
+        .tabs, .stream-buttons {
             display: flex;
             justify-content: center;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem; /* Reduced margin */
         }
-        .tabs button {
+        .tabs button, .stream-buttons button {
             flex: 1;
             padding: 0.5rem;
+            margin: 0 0.5rem;
+        }
+        .stream-buttons button, .tabs button {
+            color: white;
+        }
+        .stream-buttons .youtube-btn, .tabs .youtube-btn {
+            background-color: red;
+        }
+        .stream-buttons .twitch-btn, .tabs .twitch-btn {
+            background-color: #9146FF;
+        }
+        .stream-buttons .rumble-btn, .tabs .rumble-btn {
+            background-color: lightgreen;
+        }
+        .tabs img {
+            height: 20px;
+            width: 20px;
         }
         .tab-content {
             display: none;
+            height: 100%;
         }
         .tab-content.active {
             display: block;
+            height: 100%;
         }
         iframe {
             width: 100%;
-            height: 500px;
+            height: calc(100vh - 4rem); /* Adjusted height to fill screen minus margins */
             border: none;
         }
         .chat-iframe {
             width: 100%;
-            height: 300px;
+            height: calc(100vh - 4rem); /* Adjusted height to fill screen minus margins */
             border: none;
+        }
+        nav {
+            margin-top: 0;
         }
     </style>
     <script>
@@ -55,19 +88,28 @@
             return config;
         }
 
-        async function loadStream() {
+        async function loadStream(service) {
             const config = await loadConfig();
             const youtubeEmbed = `https://www.youtube.com/embed/live_stream?channel=${config.youtube_channel_id}`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
             const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
 
             const iframe = document.getElementById('live-stream');
-            iframe.src = youtubeEmbed;
 
-            iframe.onerror = function() {
+            if (service === 'youtube') {
+                iframe.src = youtubeEmbed;
+            } else if (service === 'twitch') {
                 iframe.src = twitchEmbed;
+            } else if (service === 'rumble') {
+                iframe.src = rumbleEmbed;
+            } else {
+                iframe.src = youtubeEmbed;
+
                 iframe.onerror = function() {
-                    iframe.src = rumbleEmbed;
+                    iframe.src = twitchEmbed;
+                    iframe.onerror = function() {
+                        iframe.src = rumbleEmbed;
+                    }
                 }
             }
         }
@@ -86,33 +128,22 @@
     </script>
 </head>
 <body>
-    <nav class="container-fluid">
-        <ul>
-            <li><strong>Streamer Hub</strong></li>
-        </ul>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Past Videos</a></li>
-            <li><a href="#">Live Stream</a></li>
-            <li><a href="#">Merch</a></li>
-            <li><a href="#" role="button">Donate</a></li>
-        </ul>
-    </nav>
     <main class="main-container">
         <div class="stream-container">
-            <hgroup>
-                <h2>Live Stream</h2>
-                <h3>Watch my live streams below</h3>
-            </hgroup>
+            <div class="stream-buttons">
+                <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
+                <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
+                <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
+            </div>
             <iframe id="live-stream" src=""></iframe>
         </div>
         <div class="chat-container">
             <div class="tabs">
-                <button onclick="switchTab('twitch-chat')">Twitch Chat</button>
-                <button onclick="switchTab('youtube-chat')">YouTube Chat</button>
-                <button onclick="switchTab('rumble-chat')">Rumble Chat</button>
+                <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
+                <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
+                <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
             </div>
-            <div id="twitch-chat" class="tab-content">
+            <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
             </div>
             <div id="youtube-chat" class="tab-content">
@@ -124,6 +155,18 @@
         </div>
     </main>
     <footer class="container">
+        <nav class="container-fluid">
+            <ul>
+                <li><strong>Streamer Hub</strong></li>
+            </ul>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Past Videos</a></li>
+                <li><a href="#">Live Stream</a></li>
+                <li><a href="#">Merch</a></li>
+                <li><a href="#" role="button">Donate</a></li>
+            </ul>
+        </nav>
         <small><a href="#">Privacy Policy</a> • <a href="#">Terms of Service</a></small>
     </footer>
     <script>
