--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
             margin-bottom: 0.5rem;
         }
         .menu-button {
-            background: none;
-            border: 1px solid lightgrey;
+            background: 1px solid lightgrey;
             cursor: pointer;
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             margin-right: 0.5rem;
             display: flex;
             align-items: center;
@@ -63,7 +62,7 @@
         .stream-buttons .twitch-btn,
         .stream-buttons .rumble-btn {
             flex: 1;
-            padding: 0.5rem;
+            padding: 0;
             margin: 0 0.25rem;
             color: white;
         }
