--- a/index.html
+++ b/index.html
@@ -39,17 +39,20 @@
             height: 100%;
         }
         .stream-buttons {
-            display: flex;
+            margin-top: 0;
+			display: flex;
             align-items: center;
             justify-content: center;
             margin-bottom: 0.5rem;
         }
         .menu-button {
             background: 1px solid lightgrey;
-            cursor: pointer;
+            color: white;
+			cursor: pointer;
             width: 50px;
             height: 50px;
-            margin-right: 0.5rem;
+            margin-top: 0;
+			margin-right: 0.5rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -62,7 +65,7 @@
         .stream-buttons .twitch-btn,
         .stream-buttons .rumble-btn {
             flex: 1;
-            padding: 0;
+            padding: 0.5rem;
             margin: 0 0.25rem;
             color: white;
         }
