--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         .stream-buttons {
             margin-top: 0;
 			display: flex;
-            align-items: center;
+            align-items: flex-start;
             justify-content: center;
             margin-bottom: 0.5rem;
         }
