--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             flex: 3;
             display: flex;
             flex-direction: column;
+			margin-top: 0;
+			padding-top: 0;
         }
         .chat-container {
             flex: 1;
