--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             display: flex;
             flex-direction: column;
             height: 100%;
+			margin-top: 0;
+			padding-top: 0;
         }
         .stream-buttons {
             margin-top: 0;
