--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			display: flex;
             align-items: flex-start;
             justify-content: center;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0;
         }
         .menu-button {
             background: 1px solid lightgrey;
