--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
         .stream-container {
             flex: 3;
-            display: flex;
+            display: flex-start;
             flex-direction: column;
 			margin-top: 0;
 			padding-top: 0;
