--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             height: 50px;
             margin-top: 0;
 			margin-right: 0.5rem;
+			margin-bottom: 0;
             display: flex;
             align-items: center;
             justify-content: center;
