--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         }
         .sidebar ul {
             list-style-type: none;
-            padding: 0;
+            padding: 2.25rem 0 0 0;
         }
         .sidebar ul li {
             margin: 1rem 0;
