--- a/Kirsche/credits.html
+++ b/Kirsche/credits.html
@@ -24,73 +24,107 @@
         .main-container {
             padding-top: 0;
             display: flex;
-            justify-content: space-between;
             flex: 1;
+        }
+        .credits-container {
+            flex: 1;
+            padding: 2rem;
         }
         .credits-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 1rem;
+            gap: 2rem;
         }
-        .credit-item {
+        .credit-card {
             text-align: center;
         }
-        .credit-item img {
-            border-radius: 10%;
+        .credit-card img {
+            border-radius: 10px;
             width: 100px;
             height: 100px;
+            object-fit: cover;
+        }
+        .credit-card a {
+            display: block;
+            margin-top: 1rem;
+            font-weight: bold;
+            text-decoration: none;
+        }
+        .credit-card p {
+            margin: 0.5rem 0;
+        }
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 250px;
+            height: 100%;
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+        }
+        .sidebar.active {
+            transform: translateX(0);
+        }
+        .sidebar ul {
+            list-style-type: none;
+            padding: 2.25rem 0 0 0;
+        }
+        .sidebar ul li {
+            margin: 1rem 0;
+        }
+        .sidebar ul li a {
+            color: white;
+            text-decoration: none;
+        }
+        .menu-button {
+            background: 1px solid lightgrey;
+            color: white;
+            cursor: pointer;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .menu-button img {
+            width: 100%;
+            height: 100%;
         }
     </style>
     <script>
+        function toggleSidebar() {
+            document.getElementById('sidebar').classList.toggle('active');
+        }
+
         async function loadCredits() {
             const response = await fetch('credits.json');
             const credits = await response.json();
-            const creditsContainer = document.getElementById('credits-container');
-            creditsContainer.innerHTML = '';
-
+            const creditsGrid = document.getElementById('credits-grid');
+            creditsGrid.innerHTML = '';
             credits.forEach(credit => {
-                const creditItem = document.createElement('div');
-                creditItem.className = 'credit-item';
+                const creditCard = document.createElement('div');
+                creditCard.className = 'credit-card';
 
                 const img = document.createElement('img');
                 img.src = credit.png_link;
                 img.alt = credit.name;
-                img.onclick = () => window.open(credit.url, '_blank');
-                
-                const name = document.createElement('div');
-                name.textContent = credit.name;
-                name.style.fontWeight = 'bold';
+                creditCard.appendChild(img);
 
-                const desc = document.createElement('div');
+                const nameLink = document.createElement('a');
+                nameLink.href = credit.url;
+                nameLink.textContent = credit.name;
+                creditCard.appendChild(nameLink);
+
+                const desc = document.createElement('p');
                 desc.textContent = credit.desc;
                 desc.style.fontStyle = 'italic';
+                creditCard.appendChild(desc);
 
-                creditItem.appendChild(img);
-                creditItem.appendChild(name);
-                creditItem.appendChild(desc);
-
-                creditsContainer.appendChild(creditItem);
+                creditsGrid.appendChild(creditCard);
             });
-        }
-
-        window.onload = function() {
-            loadCredits();
-        }
-    </script>
-</head>
-<body>
-    <main class="main-container">
-        <div class="credits-grid" id="credits-container"></div>
-    </main>
-    <div id="sidebar" class="sidebar">
-        <button class="menu-button" onclick="toggleSidebar()">
-            <img src="menu.png" alt="Menu">
-        </button>
-        <ul id="menu-list"></ul>
-    </div>
-    <script>
-        function toggleSidebar() {
-            document.getElementById('sidebar').classList.toggle('active');
         }
 
         async function loadMenu() {
@@ -109,8 +143,22 @@
         }
 
         window.onload = async function() {
+            await loadCredits();
             await loadMenu();
         }
     </script>
+</head>
+<body>
+    <main class="main-container">
+        <div class="credits-container">
+            <div id="credits-grid" class="credits-grid"></div>
+        </div>
+    </main>
+    <div id="sidebar" class="sidebar">
+        <button class="menu-button" onclick="toggleSidebar()">
+            <img src="menu.png" alt="Menu">
+        </button>
+        <ul id="menu-list"></ul>
+    </div>
 </body>
 </html>
