--- a/Kirsche/credits.html
+++ b/Kirsche/credits.html
@@ -38,20 +38,31 @@
         .credit-card {
             text-align: center;
         }
+        .credit-card a {
+            display: block;
+            text-decoration: none;
+            color: inherit;
+        }
         .credit-card img {
             border-radius: 10px;
             width: 100px;
             height: 100px;
             object-fit: cover;
+            transition: transform 0.3s ease;
         }
-        .credit-card a {
+        .credit-card img:hover {
+            transform: scale(1.1);
+        }
+        .credit-card a img {
+            margin-bottom: 1rem;
+        }
+        .credit-card a span {
             display: block;
-            margin-top: 1rem;
             font-weight: bold;
-            text-decoration: none;
         }
         .credit-card p {
             margin: 0.5rem 0;
+            font-style: italic;
         }
         .sidebar {
             position: fixed;
@@ -80,7 +91,7 @@
             text-decoration: none;
         }
         .menu-button {
-            background: lightgrey;
+            background-color: lightblue;
             color: white;
             cursor: pointer;
             width: 50px;
@@ -89,10 +100,24 @@
             align-items: center;
             justify-content: center;
             border: none;
+            transition: background-color 0.3s ease;
+            position: absolute;
+            top: 10px;
+            left: 10px;
         }
         .menu-button img {
             width: 100%;
             height: 100%;
+        }
+        .menu-button:hover {
+            background-color: deepskyblue;
+        }
+        .menu-button-large {
+            width: 100%;
+            height: 50px;
+            position: relative;
+            top: 10px;
+            left: 10px;
         }
     </style>
     <script>
@@ -113,19 +138,22 @@
                     const creditCard = document.createElement('div');
                     creditCard.className = 'credit-card';
 
+                    const link = document.createElement('a');
+                    link.href = credit.url;
+
                     const img = document.createElement('img');
                     img.src = credit.png_link;
                     img.alt = credit.name;
-                    creditCard.appendChild(img);
+                    link.appendChild(img);
 
-                    const nameLink = document.createElement('a');
-                    nameLink.href = credit.url;
-                    nameLink.textContent = credit.name;
-                    creditCard.appendChild(nameLink);
+                    const name = document.createElement('span');
+                    name.textContent = credit.name;
+                    link.appendChild(name);
+
+                    creditCard.appendChild(link);
 
                     const desc = document.createElement('p');
                     desc.textContent = credit.desc;
-                    desc.style.fontStyle = 'italic';
                     creditCard.appendChild(desc);
 
                     creditsGrid.appendChild(creditCard);
@@ -173,7 +201,7 @@
         </div>
     </main>
     <div id="sidebar" class="sidebar">
-        <button class="menu-button" onclick="toggleSidebar()">
+        <button class="menu-button-large" onclick="toggleSidebar()">
             <img src="menu.png" alt="Menu">
         </button>
         <ul id="menu-list"></ul>
