--- a/Kirsche/credits.html
+++ b/Kirsche/credits.html
@@ -38,31 +38,22 @@
         .credit-card {
             text-align: center;
         }
-        .credit-card a {
-            display: block;
-            text-decoration: none;
-            color: inherit;
-        }
         .credit-card img {
             border-radius: 10px;
             width: 100px;
             height: 100px;
             object-fit: cover;
-            transition: transform 0.3s ease;
+            cursor: pointer;
         }
-        .credit-card img:hover {
-            transform: scale(1.1);
-        }
-        .credit-card a img {
-            margin-bottom: 1rem;
-        }
-        .credit-card a span {
+        .credit-card a {
             display: block;
+            margin-top: 1rem;
             font-weight: bold;
+            text-decoration: none;
+            color: inherit;
         }
         .credit-card p {
             margin: 0.5rem 0;
-            font-style: italic;
         }
         .sidebar {
             position: fixed;
@@ -91,8 +82,8 @@
             text-decoration: none;
         }
         .menu-button {
-            background-color: lightblue;
-            color: white;
+            background: none;
+            color: blue;
             cursor: pointer;
             width: 50px;
             height: 50px;
@@ -100,24 +91,23 @@
             align-items: center;
             justify-content: center;
             border: none;
-            transition: background-color 0.3s ease;
-            position: absolute;
-            top: 10px;
-            left: 10px;
         }
         .menu-button img {
             width: 100%;
             height: 100%;
         }
         .menu-button:hover {
-            background-color: deepskyblue;
+            color: darkblue;
         }
         .menu-button-large {
-            width: 100%;
-            height: 50px;
-            position: relative;
-            top: 10px;
-            left: 10px;
+            width: 250px;
+            height: 100%;
+            background-color: #333;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: none;
         }
     </style>
     <script>
@@ -138,24 +128,27 @@
                     const creditCard = document.createElement('div');
                     creditCard.className = 'credit-card';
 
-                    const link = document.createElement('a');
-                    link.href = credit.url;
+                    const imgLink = document.createElement('a');
+                    imgLink.href = credit.url;
+                    imgLink.target = '_blank';
 
                     const img = document.createElement('img');
                     img.src = credit.png_link;
                     img.alt = credit.name;
-                    link.appendChild(img);
+                    imgLink.appendChild(img);
 
-                    const name = document.createElement('span');
-                    name.textContent = credit.name;
-                    link.appendChild(name);
-
-                    creditCard.appendChild(link);
+                    const nameLink = document.createElement('a');
+                    nameLink.href = credit.url;
+                    nameLink.textContent = credit.name;
+                    nameLink.target = '_blank';
 
                     const desc = document.createElement('p');
                     desc.textContent = credit.desc;
-                    creditCard.appendChild(desc);
+                    desc.style.fontStyle = 'italic';
 
+                    creditCard.appendChild(imgLink);
+                    creditCard.appendChild(nameLink);
+                    creditCard.appendChild(desc);
                     creditsGrid.appendChild(creditCard);
                 });
             } catch (error) {
