--- a/Kirsche/credits-tweaked.html
+++ b/Kirsche/credits-tweaked.html
@@ -192,7 +192,7 @@
         </div>
     </main>
     <div id="sidebar" class="sidebar">
-        <button class="menu-button-large" onclick="toggleSidebar()">
+        <button class="menu-button" onclick="toggleSidebar()">
             <img src="menu.png" alt="Menu">
         </button>
         <ul id="menu-list"></ul>
